syntax = "proto3";

option go_package = "./user";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message RegistrationRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message AuthorizationRequest {
  string email = 1;
  string password = 2;
}

service UserService {
  rpc Register(RegistrationRequest) returns (User);
  rpc Authorize(AuthorizationRequest) returns (User);
}
